--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
             padding: 20px;
             text-align: center;
             max-width: 800px;
+            line-height: 1;
+            color: #070606;
             margin: 0 auto;
         }
 
@@ -88,7 +90,7 @@
     </header>
     <section class="hero fade-in">
         <h2>Welcome to JS Mantos Construction Services</h2>
-        <p>Your partner in design and construction services.</p>
+        <p>Your trusted partner in design and construction services</p>
     </section>
     <section class="services fade-in" style="animation-delay: 0.5s;">
         <h2>VISION</h2>
