--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,7 +15,8 @@
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
-            font-size: 18px;
+            font-size: 30px;
+            line-height: .5;
             font-weight: bold;
         }
 
@@ -23,11 +25,10 @@
             padding: 20px;
             text-align: center;
         }
+
         header img {
             max-width: 1000px;
-        }
-        header h1 {
-            margin: 10px 0;
+            height: auto;
         }
 
         .hero {
@@ -41,14 +42,12 @@
             padding: 20px;
             text-align: center;
             max-width: 800px;
-            line-height: 1;
-            color: #070606;
             margin: 0 auto;
         }
 
         .services h2, .projects h2, .contact h2 {
             margin-bottom: 20px;
-            
+            font-size: 35px;
         }
 
         .services p, .projects p, .contact p {
@@ -63,6 +62,7 @@
             background: #333;
             color: #fff;
             text-align: center;
+            font-size: 18px;
             padding: 10px;
         }
 
@@ -82,6 +82,21 @@
                 transform: translateY(0);
             }
         }
+
+        /* Mobile responsiveness */
+        @media (max-width: 600px) {
+            body {
+                font-size: 16px;
+            }
+
+            .hero, .services, .projects, .contact {
+                padding: 15px;
+            }
+
+            iframe {
+                height: 250px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -90,7 +105,7 @@
     </header>
     <section class="hero fade-in">
         <h2>Welcome to JS Mantos Construction Services</h2>
-        <p>Your trusted partner in design and construction services</p>
+        <p>Your partner in design and construction services.</p>
     </section>
     <section class="services fade-in" style="animation-delay: 0.5s;">
         <h2>VISION</h2>
@@ -114,23 +129,22 @@
         <p>Site Supervision</p>
     </section>
     <section class="contact fade-in" style="animation-delay: 1.5s;">
-    <h2>Contact Us</h2>
-    <p>Unit 302, Building 13, Phase 2, Urban Deca Homes, Tisa, Cebu City</p>
-    <p>Contact no.: 0915-397-8459</p>
-    <p>Email: jrm.arc12@gmail.com</p>
-    <div style="margin-top: 20px;">
-        <iframe 
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1164.0826643579096!2d123.86390709219118!3d10.307852008631567!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33a99f54af5b2cd3%3A0xfda678e37cdc8d6!2sUrban%20Deca%20Homes%20Tisa%20Phase%202%20Building13!5e1!3m2!1sen!2sph!4v1748506073935!5m2!1sen!2sph" 
-            width="100%" 
-            height="300" 
-            style="border:0;" 
-            allowfullscreen="" 
-            loading="lazy" 
-            referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
-    </div>
-</section>
-
+        <h2>Contact Us</h2>
+        <p>Unit 302, Building 13, Phase 2, Urban Deca Homes, Tisa, Cebu City</p>
+        <p>Contact no.: 09153978459</p>
+        <p>Email: jrm.arc12@gmail.com</p>
+        <div style="margin-top: 20px;">
+            <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1164.0826643579096!2d123.86390709219118!3d10.307852008631567!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33a99f54af5b2cd3%3A0xfda678e37cdc8d6!2sUrban%20Deca%20Homes%20Tisa%20Phase%202%20Building13!5e1!3m2!1sen!2sph!4v1748506073935!5m2!1sen!2sph" 
+                width="100%" 
+                height="300" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
+    </section>
     <footer>
         <p>&copy; 2023 Mantos Construction Services. All rights reserved.</p>
     </footer>
