--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,7 +19,7 @@
             font-weight: bold;
         }
 
-        header {
+         header {
             background: #f4f4f4;
             padding: 20px;
             text-align: center;
@@ -95,6 +94,26 @@
 
             iframe {
                 height: 250px;
+            }
+        }
+
+        /* Tablet responsiveness */
+        @media (min-width: 601px) and (max-width: 1024px) {
+            body {
+                font-size: 22px;
+                line-height: 1.2;
+            }
+
+            .hero, .services, .projects, .contact {
+                padding: 25px;
+            }
+
+            header img {
+                max-width: 90%;
+            }
+
+            iframe {
+                height: 300px;
             }
         }
     </style>
