--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
+            background-size: 50%;
             font-size: 30px;
             line-height: .5;
             font-weight: bold;
@@ -46,15 +47,15 @@
 
         .services h2, .projects h2, .contact h2 {
             margin-bottom: 20px;
-            font-size: 35px;
+            font-size: 45px;
         }
 
         .services p, .projects p, .contact p {
             margin-bottom: 10px;
-            font-size: 18px;
+            font-size: 22px;
             font-weight: normal;
             line-height: 1.6;
-            color: #070606;
+            color: #000000;
         }
 
         footer {
