--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         }
 
         .hero {
-            background: #333;
-            color: #fff;
+            background: #0716f1;
+            color: #ffffff;
             padding: 50px 20px;
             text-align: center;
         }
@@ -149,7 +149,7 @@
         <p>Site Supervision</p>
     </section>
     <section class="contact fade-in" style="animation-delay: 1.5s;">
-        <h2>Contact Us</h2>
+        <h2 class="red-text">Contact Us</h2>
         <p>Unit 302, Building 13, Phase 2, Urban Deca Homes, Tisa, Cebu City</p>
         <p>Contact no.: 09153978459</p>
         <p>Email: jrm.arc12@gmail.com</p>
