--- a/index.html
+++ b/index.html
@@ -149,6 +149,136 @@
         <p>JS Mantos Construction Services is a Cebu-based construction company specializing in comprehensive design and construction solutions. It is founded and managed by Architect and Registered Master Plumber Jason R. Mantos. With professional experience in the construction industry since 2012, we provide reliable, well-rounded services to meet every client's unique needs.</p>
     </section>
     <section class="projects fade-in" style="animation-delay: 1s;">
+    <h2 style="text-align: center;">OUR PROJECTS</h2>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Project Gallery</title>
+  <link href="https://cdn.jsdelivr.net/npm/lightbox2@2/dist/css/lightbox.min.css" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f4f4f4;
+      margin: 0;
+      padding: 20px;
+    }
+
+    .gallery-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
+    }
+
+    .gallery-item {
+      background: #fff;
+      border-radius: 8px;
+      overflow: hidden;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease;
+      width: 300px;
+    }
+
+    .gallery-item:hover {
+      transform: translateY(-5px);
+    }
+
+    .gallery-item > a img {
+      width: 100%;
+      height: auto;
+      display: block;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      border-radius: 4px;
+    }
+
+    .gallery-item > a img:hover {
+      transform: scale(1.05);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    }
+
+    .sub-gallery {
+      display: flex;
+      gap: 10px;
+      padding: 10px;
+    }
+
+    .sub-gallery a img {
+      width: 48%;
+      height: auto;
+      border-radius: 4px;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .sub-gallery a img:hover {
+      transform: scale(1.05);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    }
+
+    @media (max-width: 768px) {
+      .gallery-item {
+        width: 100%;
+      }
+    }
+  </style>
+</head>
+<body>
+
+<div class="gallery-container">
+
+  <!-- Project 1 -->
+  <div class="gallery-item">
+    <a href="images/project1-large.jpg" data-lightbox="project1" data-title="Project 1">
+      <img src="images/project1-thumb.jpg" alt="Project 1">
+    </a>
+    <div class="sub-gallery">
+      <a href="images/project1-extra1.jpg" data-lightbox="project1" data-title="Project 1 Extra 1">
+        <img src="images/project1-extra1-thumb.jpg" alt="Project 1 Extra 1">
+      </a>
+      <a href="images/project1-extra2.jpg" data-lightbox="project1" data-title="Project 1 Extra 2">
+        <img src="images/project1-extra2-thumb.jpg" alt="Project 1 Extra 2">
+      </a>
+    </div>
+  </div>
+
+  <!-- Project 2 -->
+  <div class="gallery-item">
+    <a href="images/project2-large.jpg" data-lightbox="project2" data-title="Project 2">
+      <img src="images/project2-thumb.jpg" alt="Project 2">
+    </a>
+    <div class="sub-gallery">
+      <a href="images/project2-extra1.jpg" data-lightbox="project2" data-title="Project 2 Extra 1">
+        <img src="images/project2-extra1-thumb.jpg" alt="Project 2 Extra 1">
+      </a>
+      <a href="images/project2-extra2.jpg" data-lightbox="project2" data-title="Project 2 Extra 2">
+        <img src="images/project2-extra2-thumb.jpg" alt="Project 2 Extra 2">
+      </a>
+    </div>
+  </div>
+
+  <!-- Project 3 -->
+  <div class="gallery-item">
+    <a href="images/project3-large.jpg" data-lightbox="project3" data-title="Project 3">
+      <img src="images/project3-thumb.jpg" alt="Project 3">
+    </a>
+    <div class="sub-gallery">
+      <a href="images/project3-extra1.jpg" data-lightbox="project3" data-title="Project 3 Extra 1">
+        <img src="images/project3-extra1-thumb.jpg" alt="Project 3 Extra 1">
+      </a>
+      <a href="images/project3-extra2.jpg" data-lightbox="project3" data-title="Project 3 Extra 2">
+        <img src="images/project3-extra2-thumb.jpg" alt="Project 3 Extra 2">
+      </a>
+    </div>
+  </div>
+
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/lightbox2@2/dist/js/lightbox.min.js"></script>
+</body>
+</html>
+</section>
+    <section class="projects fade-in" style="animation-delay: 1s;">
         <h2>SERVICES</h2>
         <p>Architectural and Engineering Design</p>
         <p>Construction</p>
