--- a/index.html
+++ b/index.html
@@ -1,342 +1,275 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS Mantos Construction Services</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            background-image: url('background.png');
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-size: 50%;
-            font-size: 30px;
-            line-height: .5;
-            font-weight: bold;
-        }
-
-        header {
-            background: #f4f4f4;
-            padding: 20px;
-            text-align: center;
-        }
-
-        header img {
-            max-width: 1000px;
-            height: auto;
-        }
-
-        .hero {
-            background: #0716f1;
-            color: #ffffff;
-            padding: 50px 20px;
-            text-align: center;
-        }
-
-        .services, .projects, .contact {
-            padding: 20px;
-            text-align: center;
-            max-width: 800px;
-            margin: 0 auto;
-        }
-
-        .services h2, .projects h2, .contact h2 {
-            margin-bottom: 20px;
-            font-size: 45px;
-        }
-
-        .services p, .projects p, .contact p {
-            margin-bottom: 10px;
-            font-size: 22px;
-            font-weight: normal;
-            line-height: 1.6;
-            color: #000000;
-        }
-
-        footer {
-            background: #0716f1;
-            color: #fff;
-            text-align: center;
-            font-size: 18px;
-            padding: 10px;
-        }
-
-        footer a {
-            color: #fff;
-            text-decoration: none;
-        }
-
-        footer img {
-            width: 30px;
-            vertical-align: middle;
-            margin-right: 8px;
-        }
-
-        h1, h2, h3, h4, h5, h6 {
-            font-weight: bold;
-        }
-
-        .fade-in {
-            opacity: 0;
-            transform: translateY(20px);
-            animation: fadeInUp 1s ease-out forwards;
-        }
-
-        @keyframes fadeInUp {
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        @media (max-width: 600px) {
-            body {
-                font-size: 16px;
-            }
-
-            .hero, .services, .projects, .contact {
-                padding: 15px;
-            }
-
-            iframe {
-                height: 250px;
-            }
-        }
-
-        @media (min-width: 601px) and (max-width: 1024px) {
-            body {
-                font-size: 22px;
-                line-height: 1.2;
-            }
-
-            .hero, .services, .projects, .contact {
-                padding: 25px;
-            }
-
-            header img {
-                max-width: 90%;
-            }
-
-            iframe {
-                height: 300px;
-            }
-        }
-    </style>
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>JS Mantos Construction Services</title>
+ <style>
+ body {
+   font-family: Arial, sans-serif;
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+   background-image: url('background.png');
+   background-size: cover;
+   background-repeat: no-repeat;
+   background-attachment: fixed;
+   background-size: 50%;
+   font-size: 30px;
+   line-height: .5;
+   font-weight: bold;
+ }
+ header {
+   background: #f4f4f4;
+   padding: 20px;
+   text-align: center;
+ }
+ header img {
+   max-width: 1000px;
+   height: auto;
+ }
+ .hero {
+   background: #0716f1;
+   color: #ffffff;
+   padding: 50px 20px;
+   text-align: center;
+ }
+ .services, .projects, .contact {
+   padding: 20px;
+   text-align: center;
+   max-width: 800px;
+   margin: 0 auto;
+ }
+ .services h2, .projects h2, .contact h2 {
+   margin-bottom: 20px;
+   font-size: 45px;
+ }
+ .services p, .projects p, .contact p {
+   margin-bottom: 10px;
+   font-size: 22px;
+   font-weight: normal;
+   line-height: 1.6;
+   color: #000000;
+ }
+ footer {
+   width: 100%;
+   background: #0716f1;
+   color: #ffffff;
+   text-align: center;
+   font-size: 20px;
+   padding: 15px 10px;
+   font-weight: bold;
+   position: relative;
+   left: 0;
+   bottom: 0;
+   margin: 0;
+   box-sizing: border-box;
+ }
+ footer a {
+   color: #fff;
+   text-decoration: none;
+ }
+ footer img {
+   width: 30px;
+   vertical-align: middle;
+   margin-right: 8px;
+ }
+ h1, h2, h3, h4, h5, h6 {
+   font-weight: bold;
+ }
+ .fade-in {
+   opacity: 0;
+   transform: translateY(20px);
+   animation: fadeInUp 1s ease-out forwards;
+ }
+ @keyframes fadeInUp {
+   to {
+     opacity: 1;
+     transform: translateY(0);
+   }
+ }
+ @media (max-width: 600px) {
+   body {
+     font-size: 16px;
+   }
+   .hero, .services, .projects, .contact {
+     padding: 15px;
+   }
+   iframe {
+     height: 250px;
+   }
+ }
+ @media (min-width: 601px) and (max-width: 1024px) {
+   body {
+     font-size: 22px;
+     line-height: 1.2;
+   }
+   .hero, .services, .projects, .contact {
+     padding: 25px;
+   }
+   header img {
+     max-width: 90%;
+   }
+   iframe {
+     height: 300px;
+   }
+ }
+ </style>
 </head>
 <body>
-    <header>
-        <img src="logo.png" alt="Mantos Construction Services Logo">
-    </header>
-    <section class="hero fade-in">
-        <h2>Welcome to JS Mantos Construction Services</h2>
-        <p>Your partner in design and construction services.</p>
-    </section>
-    <section class="services fade-in" style="animation-delay: 0.5s;">
-        <h2>VISION</h2>
-        <p>To be the leading construction company known for high-quality construction services, and provide exceptional client satisfaction & expectation.</p>
-    </section>
-    <section class="services fade-in" style="animation-delay: 0.5s;">
-        <h2>MISSION</h2>
-        <p>JS Mantos Construction Services is dedicated to provide high-quality, sustainable, and cost-effective construction services that meet the needs and expectations of our clients.</p>
-    </section>
-    <section class="services fade-in" style="animation-delay: 0.5s;">
-        <h2>ABOUT</h2>
-        <p>JS Mantos Construction Services is a Cebu-based construction company specializing in comprehensive design and construction solutions. It is founded and managed by Architect and Registered Master Plumber Jason R. Mantos. With professional experience in the construction industry since 2012, we provide reliable, well-rounded services to meet every client's unique needs.</p>
-    </section>
-    </section>
+ <header>
+   <img src="logo.png" alt="Mantos Construction Services Logo">
+ </header>
+ <section class="hero fade-in">
+   <h2>Welcome to JS Mantos Construction Services</h2>
+   <p>Your partner in design and construction services.</p>
+ </section>
+ <section class="services fade-in" style="animation-delay: 0.5s;">
+   <h2>VISION</h2>
+   <p>To be the leading construction company known for high-quality construction services, and provide exceptional client satisfaction & expectation.</p>
+ </section>
+ <section class="services fade-in" style="animation-delay: 0.5s;">
+   <h2>MISSION</h2>
+   <p>JS Mantos Construction Services is dedicated to provide high-quality, sustainable, and cost-effective construction services that meet the needs and expectations of our clients.</p>
+ </section>
+ <section class="services fade-in" style="animation-delay: 0.5s;">
+   <h2>ABOUT</h2>
+   <p>JS Mantos Construction Services is a Cebu-based construction company specializing in comprehensive design and construction solutions. It is founded and managed by Architect and Registered Master Plumber Jason R. Mantos. With professional experience in the construction industry since 2012, we provide reliable, well-rounded services to meet every client's unique needs.</p>
+ </section>
 
-<!-- Video Section Start -->
-<section class="video-section fade-in" style="animation-delay: 0.75s; text-align: center; padding: 20px;">
-  <h2>Company Introduction Video</h2>
-  <video width="60%" controls>
-    <source src="videos/company-intro.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
-</section>
-<!-- Video Section End -->
+ <section class="video-section fade-in" style="animation-delay: 0.75s; text-align: center; padding: 20px;">
+   <h2>Company Introduction Video</h2>
+   <video width="60%" controls>
+     <source src="videos/company-intro.mp4" type="video/mp4">
+     Your browser does not support the video tag.
+   </video>
+ </section>
 
-<section class="projects fade-in" style="animation-delay: 1s;">
-    <section class="projects fade-in" style="animation-delay: 1s;">
-    <h2 style="text-align: center;">OUR PROJECTS</h2>
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Project Gallery</title>
-  <link rel="stylesheet" href="gallery.css">
-  <link href="https://cdn.jsdelivr.net/npm/lightbox2@2/dist/css/lightbox.min.css" rel="stylesheet">
-</head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Our Projects Album</title>
+
+  <!-- Lightbox CSS (you need to include this from CDN or local file) -->
+  <link href="style.css" rel="stylesheet">
+
   <style>
     body {
-  font-family: 'Segoe UI', sans-serif;
-  background-color: #f9f9f9;
-  margin: 0;
-  padding: 20px;
-  color: #333;
-}
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+      background-color: #f9f9f9;
+    }
 
-.gallery-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 24px;
-  justify-content: center;
-}
+    h2 {
+      text-align: center;
+      margin-bottom: 40px;
+    }
 
-.gallery-item {
-  background: #ffffff;
-  border-radius: 10px;
-  overflow: hidden;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  width: 300px;
-}
+    .album-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 2rem;
+      justify-content: center;
+    }
 
-.gallery-item:hover {
-  transform: translateY(-6px);
-  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.15);
-}
+    .album-item {
+      max-width: 300px;
+      background: #fff;
+      padding: 15px;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      text-align: center;
+    }
 
-.gallery-item > a img {
-  width: 100%;
-  height: auto;
-  display: block;
-  border-radius: 0;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
+    .album-item img {
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+      margin-bottom: 10px;
+    }
 
-.gallery-item > a img:hover {
-  transform: scale(1.03);
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-}
+    .album-gallery {
+      display: flex;
+      gap: 10px;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
 
-.sub-gallery {
-  display: flex;
-  gap: 10px;
-  padding: 10px;
-  justify-content: center;
-}
-
-.sub-gallery a img {
-  width: 48%;
-  height: auto;
-  border-radius: 6px;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.sub-gallery a img:hover {
-  transform: scale(1.05);
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-}
-
-@media (max-width: 768px) {
-  .gallery-item {
-    width: 100%;
-  }
-
-  .sub-gallery {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .sub-gallery a img {
-    width: 90%;
-  }
-}
+    .album-gallery img {
+      width: 80px;
+      height: auto;
+      border-radius: 6px;
+    }
   </style>
 </head>
 <body>
 
-<div class="gallery-container">
+  <section class="projects album fade-in" style="animation-delay: 1s;">
+    <h2>Our Projects</h2>
+    <div class="album-container">
 
-  <!-- Project 1 -->
-  <div class="gallery-item">
-    <a href="images/project1-large.jpg" data-lightbox="project1" data-title="Project 1">
-      <img src="images/project1-thumb.jpg" alt="Project 1">
-    </a>
-    <div class="sub-gallery">
-      <a href="images/project1-extra1.jpg" data-lightbox="project1" data-title="Project 1 Extra 1">
-        <img src="images/project1-extra1-thumb.jpg" alt="Project 1 Extra 1">
-      </a>
-      <a href="images/project1-extra2.jpg" data-lightbox="project1" data-title="Project 1 Extra 2">
-        <img src="images/project1-extra2-thumb.jpg" alt="Project 1 Extra 2">
-      </a>
+      <!-- Project 1 -->
+      <div class="album-item">
+        <a href="images/project1-large.jpg" data-lightbox="project1" data-title="Project 1">
+          <img src="images/project1-thumb.jpg" alt="Project 1 Cover">
+        </a>
+        <div class="album-gallery">
+          <a href="images/project1-extra1.jpg" data-lightbox="project1" data-title="Project 1 - Extra 1">
+            <img src="images/project1-extra1-thumb.jpg" alt="Project 1 Extra 1">
+          </a>
+          <a href="images/project1-extra2.jpg" data-lightbox="project1" data-title="Project 1 - Extra 2">
+            <img src="images/project1-extra2-thumb.jpg" alt="Project 1 Extra 2">
+          </a>
+        </div>
+      </div>
+
+      <!-- Add more .album-item blocks for other projects -->
+
     </div>
-  </div>
+  </section>
 
-  <!-- Project 2 -->
-  <div class="gallery-item">
-    <a href="images/project2-large.jpg" data-lightbox="project2" data-title="Project 2">
-      <img src="images/project2-thumb.jpg" alt="Project 2">
-    </a>
-    <div class="sub-gallery">
-      <a href="images/project2-extra1.jpg" data-lightbox="project2" data-title="Project 2 Extra 1">
-        <img src="images/project2-extra1-thumb.jpg" alt="Project 2 Extra 1">
-      </a>
-      <a href="images/project2-extra2.jpg" data-lightbox="project2" data-title="Project 2 Extra 2">
-        <img src="images/project2-extra2-thumb.jpg" alt="Project 2 Extra 2">
-      </a>
-    </div>
-  </div>
-
-  <!-- Project 3 -->
-  <div class="gallery-item">
-    <a href="images/project3-large.jpg" data-lightbox="project3" data-title="Project 3">
-      <img src="images/project3-thumb.jpg" alt="Project 3">
-    </a>
-    <div class="sub-gallery">
-      <a href="images/project3-extra1.jpg" data-lightbox="project3" data-title="Project 3 Extra 1">
-        <img src="images/project3-extra1-thumb.jpg" alt="Project 3 Extra 1">
-      </a>
-      <a href="images/project3-extra2.jpg" data-lightbox="project3" data-title="Project 3 Extra 2">
-        <img src="images/project3-extra2-thumb.jpg" alt="Project 3 Extra 2">
-      </a>
-    </div>
-  </div>
-
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/lightbox2@2/dist/js/lightbox.min.js"></script>
+  <!-- Lightbox JS (you need to include this from CDN or local file) -->
+  <script src="style.css"></script>
 </body>
 </html>
-</section>
-    <section class="projects fade-in" style="animation-delay: 1s;">
-        <h2>SERVICES</h2>
-        <p>Architectural and Engineering Design</p>
-        <p>Construction</p>
-        <p>Consultancy</p>
-        <p>Cost Estimates</p>
-        <p>Project Management</p>
-        <p>Site Supervision</p>
-    </section>
-    <section class="contact fade-in" style="animation-delay: 1.5s;">
-        <h2 class="red-text">Contact Us</h2>
-        <p>Unit 302, Building 13, Phase 2, Urban Deca Homes, Tisa, Cebu City</p>
-        <p>Contact no.: 09153978459</p>
-        <p>Email: jrm.arc12@gmail.com</p>
-        <div style="margin-top: 20px;">
-            <iframe 
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1164.0826643579096!2d123.86390709219118!3d10.307852008631567!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33a99f54af5b2cd3%3A0xfda678e37cdc8d6!2sUrban%20Deca%20Homes%20Tisa%20Phase%202%20Building13!5e1!3m2!1sen!2sph!4v1748506073935!5m2!1sen!2sph" 
-                width="100%" 
-                height="300" 
-                style="border:0;" 
-                allowfullscreen="" 
-                loading="lazy" 
-                referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
-        </div>
-    </section>
-    <footer>
-        <p>&copy; 2023 Mantos Construction Services. All rights reserved.</p>
-        <div style="margin-top: 10px;">
-            <a href="https://www.facebook.com/share/1Ekbhnfh1Z/" target="_blank">
-                <img src="facebook-icon.png" alt="Facebook Icon">Follow us on Facebook
-            </a>
-        </div>
-    </footer>
+ <section class="projects fade-in" style="animation-delay: 1s;">
+   <h2>SERVICES</h2>
+   <p>Architectural and Engineering Design</p>
+   <p>Construction</p>
+   <p>Consultancy</p>
+   <p>Cost Estimates</p>
+   <p>Project Management</p>
+   <p>Site Supervision</p>
+ </section>
+
+ <section class="contact fade-in" style="animation-delay: 1.5s;">
+   <h2 class="red-text">Contact Us</h2>
+   <p>Unit 302, Building 13, Phase 2, Urban Deca Homes, Tisa, Cebu City</p>
+   <p>Contact no.: 09153978459</p>
+   <p>Email: jrm.arc12@gmail.com</p>
+   <div style="margin-top: 20px;">
+     <iframe 
+       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1164.0826643579096!2d123.86390709219118!3d10.307852008631567!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33a99f54af5b2cd3%3A0xfda678e37cdc8d6!2sUrban%20Deca%20Homes%20Tisa%20Phase%202%20Building13!5e1!3m2!1sen!2sph!4v1748506073935!5m2!1sen!2sph" 
+       width="100%" 
+       height="300" 
+       style="border:0;" 
+       allowfullscreen="" 
+       loading="lazy" 
+       referrerpolicy="no-referrer-when-downgrade">
+     </iframe>
+   </div>
+ </section>
+
+ <footer>
+   <p>© 2023 Mantos Construction Services. All rights reserved.</p>
+   <div style="margin-top: 10px;">
+     <a href="https://www.facebook.com/share/1Ekbhnfh1Z/" target="_blank">
+       <img src="facebook-icon.png" alt="Facebook Icon">Follow us on Facebook
+     </a>
+   </div>
+ </footer>
 </body>
 </html>
