--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
  @media (max-width: 600px) {
    body {
      font-size: 16px;
+     background-image: url('background.png');
+     background-size: cover;
+     background-repeat: no-repeat;
+     background-attachment: fixed;
+     background-size: 50%;
    }
    .hero, .services, .projects, .contact {
      padding: 15px;
@@ -103,6 +108,11 @@
    body {
      font-size: 22px;
      line-height: 1.2;
+     background-image: url('background.png');
+     background-size: cover;
+     background-repeat: no-repeat;
+     background-attachment: fixed;
+     background-size: 50%;
    }
    .hero, .services, .projects, .contact {
      padding: 25px;
