--- a/index.html
+++ b/index.html
@@ -277,6 +277,18 @@
        referrerpolicy="no-referrer-when-downgrade">
      </iframe>
    </div>
+  <form action="https://formsubmit.co/acemomoxke@gmail.com" method="POST" style="margin-top: 20px;">
+  <label for="name" style="font-size: 14px; display: block; margin-bottom: 5px;">Name:</label>
+  <input id="name" name="name" required style="width: 50%; padding: 5px; font-size: 14px; margin-bottom: 15px;" type="text"/>
+
+  <label for="email" style="font-size: 14px; display: block; margin-bottom: 5px;">Email:</label>
+  <input id="email" name="email" required style="width: 50%; padding: 5px; font-size: 14px; margin-bottom: 15px;" type="email"/>
+
+  <label for="message" style="font-size: 14px; display: block; margin-bottom: 5px;">Message:</label>
+  <textarea id="message" name="message" required rows="5" style="width: 100%; padding: 5px; font-size: 14px; margin-bottom: 15px;"></textarea>
+
+  <button style="padding: 10px 20px; font-size: 14px;" type="submit">Send</button>
+</form>
  </section>
 
  <footer>
