--- a/index.html
+++ b/index.html
@@ -276,17 +276,27 @@
        loading="lazy" 
        referrerpolicy="no-referrer-when-downgrade">
      </iframe>
-   </div>
-  <form action="https://formsubmit.co/acemomoxke@gmail.com" method="POST" style="margin-top: 20px;">
+   <form action="https://formsubmit.co/jrm.arc12@gmail.com" method="POST" style="margin-top: 20px;">
+  <!-- Redirect after submission -->
+  <input type="hidden" name="_next" value="https://momoxke123.github.io/JSMantos/">
+
+  <!-- Name -->
   <label for="name" style="font-size: 14px; display: block; margin-bottom: 5px;">Name:</label>
-  <input id="name" name="name" required style="width: 50%; padding: 5px; font-size: 14px; margin-bottom: 15px;" type="text"/>
+  <input id="name" name="name" required style="width: 50%; padding: 5px; font-size: 14px; margin-bottom: 15px; text-align: center;" type="text"/>
 
+  <!-- Contact No. -->
+  <label for="contact" style="font-size: 14px; display: block; margin-bottom: 5px;">Contact No.:</label>
+  <input id="contact" name="contact" required style="width: 50%; padding: 5px; font-size: 14px; margin-bottom: 15px; text-align: center;" type="text"/>
+
+  <!-- Email -->
   <label for="email" style="font-size: 14px; display: block; margin-bottom: 5px;">Email:</label>
-  <input id="email" name="email" required style="width: 50%; padding: 5px; font-size: 14px; margin-bottom: 15px;" type="email"/>
+  <input id="email" name="email" required style="width: 50%; padding: 5px; font-size: 14px; margin-bottom: 15px; text-align: center;" type="email"/>
 
+  <!-- Message -->
   <label for="message" style="font-size: 14px; display: block; margin-bottom: 5px;">Message:</label>
-  <textarea id="message" name="message" required rows="5" style="width: 100%; padding: 5px; font-size: 14px; margin-bottom: 15px;"></textarea>
+  <textarea id="message" name="message" required rows="5" style="width: 100%; padding: 5px; font-size: 14px; margin-bottom: 15px; text-align: center;"></textarea>
 
+  <!-- Submit Button -->
   <button style="padding: 10px 20px; font-size: 14px;" type="submit">Send</button>
 </form>
  </section>
