--- a/index.html
+++ b/index.html
@@ -281,19 +281,19 @@
   <input type="hidden" name="_next" value="https://momoxke123.github.io/JSMantos/">
 
   <!-- Name -->
-  <label for="name" style="font-size: 14px; display: block; margin-bottom: 5px;">Name:</label>
+  <label for="name" style="font-size: 14px; display: block; margin-bottom: 5px;">Please enter your Name here:</label>
   <input id="name" name="name" required style="width: 50%; padding: 5px; font-size: 14px; margin-bottom: 15px; text-align: center;" type="text"/>
 
   <!-- Contact No. -->
-  <label for="contact" style="font-size: 14px; display: block; margin-bottom: 5px;">Contact No.:</label>
+  <label for="contact" style="font-size: 14px; display: block; margin-bottom: 5px;">Please enter your Contact No. here:</label>
   <input id="contact" name="contact" required style="width: 50%; padding: 5px; font-size: 14px; margin-bottom: 15px; text-align: center;" type="text"/>
 
   <!-- Email -->
-  <label for="email" style="font-size: 14px; display: block; margin-bottom: 5px;">Email:</label>
+  <label for="email" style="font-size: 14px; display: block; margin-bottom: 5px;">Please enter your Email here:</label>
   <input id="email" name="email" required style="width: 50%; padding: 5px; font-size: 14px; margin-bottom: 15px; text-align: center;" type="email"/>
 
   <!-- Message -->
-  <label for="message" style="font-size: 14px; display: block; margin-bottom: 5px;">Message:</label>
+  <label for="message" style="font-size: 14px; display: block; margin-bottom: 5px;">Message your inquiries:</label>
   <textarea id="message" name="message" required rows="5" style="width: 100%; padding: 5px; font-size: 14px; margin-bottom: 15px; text-align: center;"></textarea>
 
   <!-- Submit Button -->
